syntax = "proto3";

package telemetry.module.memory.v1;

option go_package = "telemetry/agent/modules/memory/pb;memorypb";

message CollectorSpec {
  string category = 1;
  string interval = 2;
}

message ModuleRegistration {
  repeated CollectorSpec collectors = 1;
}

message Metrics {
  uint64 total_bytes = 1;
  uint64 used_bytes = 2;
  uint64 free_bytes = 3;
  uint64 available_bytes = 4;
  uint64 cached_bytes = 5;
  uint64 buffers_bytes = 6;
}
